[package]
name = "les"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10.1"
bitflags = "1.3.2"
cpal = "0.13.4"
lazy_static = "1.4.0"
raylib = "3.5.0"
bevy = { version = "0.5.0", default-features = false, features = [
    "bevy_gilrs",
    "bevy_wgpu",
    "bevy_winit",
    "render",
] }
bevy_egui = "0.8.0"
rfd = "0.6.1"
futures-lite = "1.12.0"
