[package]
name = "les"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/les_bevy"]
default-members = ["crates/les_bevy"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bit_field = "0.10.1"
bitflags = "1.3.2"
lazy_static = "1.4.0"

[profile.release]
lto = "thin"
