[package]
name = "les_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
les_nes = { path = "../les_nes" }
bevy = { version = "0.13", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "multi-threaded",
    "webgpu",
] }
bevy_egui = { version = "0.27", default-features = false, features = [
    "default_fonts",
    "render",
] }
rfd = "0.14"
crossbeam-channel = "0.5"
leafwing-input-manager = { version = "0.13", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.15", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1.7"
