[package]
name = "les_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
les_nes = { path = "../les_nes" }
bevy = { version = "0.17", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_image",
    "bevy_asset",
    "bevy_core_pipeline",
    "multi_threaded",
    "webgpu",
] }
bevy_egui = { version = "0.37", default-features = false, features = [
    "default_fonts",
    "render",
] }
rfd = "0.15"
crossbeam-channel = "0.5"
leafwing-input-manager = { version = "0.18", default-features = false, features = [
    "keyboard",
    "gamepad",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.16", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3", features = ["wasm_js"] }
