[package]
name = "les_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.5.0", default-features = false, features = [
    "bevy_gilrs",
    "bevy_wgpu",
    "bevy_winit",
    "render",
] }
bevy_egui = "0.8.0"
rfd = "0.6.1"
crossbeam-channel = "0.5.1"
egui = "0.15.0"
cpal = "0.13.4"
les = { path = "../../" }
