[package]
name = "les_bevy"
version = "0.1.0"
edition = "2021"

[lib]
name = "les_bevy_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
les = { path = "../../" }
bevy_egui = "0.8.0"
egui = "0.15.0"
rfd = "0.6.1"
wasm-bindgen = "0.2"
crossbeam-channel = "0.5.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.5.0", default-features = false, features = [
    "bevy_gilrs",
    "bevy_wgpu",
    "bevy_winit",
    "render",
] }
cpal = "0.13.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.5.0", default-features = false, features = [
    "bevy_gilrs",
    "bevy_winit",
    "render",
] }
cpal = { version = "0.13.4", features = ["wasm-bindgen"] }
bevy_webgl2 = "0.5"
