[package]
name = "les_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
les = { path = "../../" }
bevy = { version = "0.6.0", default-features = false, features = [
    "bevy_gilrs",
    "bevy_winit",
    "render",
] }
bevy_egui = "0.10.0"
egui = "0.16.0"
rfd = "0.6.1"
crossbeam-channel = "0.5.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.13.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.13.4", features = ["wasm-bindgen"] }
